[project]
name = "abuse-identifier"
version = "0.1.0"
description = "Classification of abuse in text in chatrooms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "ruff>=0.11.5",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]
